# rtsr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bbuild.bat  haikal.toml  makefile  makefilewin  rtsr_vim_session  vim_session
nim/: display.nim  make.nims
notes/: sdl2-mingw-install.txt
scripts/: bbuild.bat  bdbgrun.bat
source/: defines.h  display.c  display.h  geometry.c  geometry.h  main.c  mesh.c  mesh.h  salloc.c  triangle.c  triangle.h  vector.c  vector.h
src/: display.c  display.h  main.c  main.nim  mesh.c  mesh.h  salloc.h  triangle.c  triangle.h  vector.c  vector.h  win64main.c
win/: rtsr.sln  rtsr.vcxproj  rtsr.vcxproj.filters
